kustomize/manifest/dev-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: testapp
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - env:
        - name: LAST_UPDATE
          value: CURRENT_TIMESTAMP
        - name: LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: LOG_LEVEL
              name: app-config-47668c6k28
        image: gcr.io/projectNameNonprod/testapp:dev
        imagePullPolicy: Always
        name: testapp
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        fsGroup: 6000
        runAsGroup: 7000
        runAsUser: 5000
      strategy:
        type: Recreate
